--- a/assets/style.css
+++ b/assets/style.css
@@ -69,6 +69,7 @@ body {
 
 .picture img {
 	width: 100%;
+	height: auto;
 
 }
 #about-me {
@@ -80,10 +81,13 @@ body {
 	font-size: 30px;
 }
 .about-me__introduction {
+	display: block;
 	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+	margin-left: 0;
+	margin-right: 0;
 }
 #about-me p {
 	width: 80%;
@@ -102,7 +106,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #6b642b;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
